tests/ui/expressions/struct-expressions/struct-expression-union-shorthand-initializer-2.stderr
error[E0784]: union expressions should have exactly one field
  --> $DIR/struct-expression-union-shorthand-initializer-2.rs:11:38
   |
LL |     let shorthand_union_two_fields = MyUnion { x, y };
   |                                      ^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0784`.
